welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: ')' expected but ';' found.
	if(lookingFor(value; nums)){
                           ^indexOfValue:2: error: ';' expected but ')' found.
	if(lookingFor(value; nums)){
                                 ^